Main-navigation seems to bug in ie and when scrolling - Refactored script part to work in a easier way - Fixed bugg, when scrolling content jumps up - Fixed ie issue with navigation not looking correct on load

--- a/src/views/component/Content + Teasers/main-content/style.less
+++ b/src/views/component/Content + Teasers/main-content/style.less
@@ -88,9 +88,3 @@
     }
   }
 }
-
-@media (max-width: 991px) {
-  :host {
-    margin-top: 0 !important;
-  }
-}
